# slowave

./: .gitignore  .mailmap  .publicignore  .release-please-manifest.json  CHANGELOG.md  CLA.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  release-please-config.json  run_2wiki_benchmark.py
.github/workflows/: ci.yml  homebrew.yml  release-please.yml  release.yml  tests.yml
Formula/: slowave.rb
data/: .gitignore  temporal_eval_stage0_baseline.json  temporal_eval_stage1_no_llm.json  temporal_eval_stage1_t0.85_capped_no_llm.json  temporal_eval_stage2_full.json  temporal_eval_stage3b_full.json  temporal_eval_stage5_full.json
data/dmr/: dmr.json
data/dmr_original/: PROVENANCE.md  README.md
data/longmemeval/: RESULTS_SUMMARY.md
data/salience_ablation/: locomo_baseline.json  locomo_no_salience.json  locomo_sw05_full.json  stale_baseline.json  stale_no_salience.json
docs/: agent-enforcement.md  agents.md  architecture.md  benchmarks.md  cli.md  dashboard.md  debugging-schemas.md  design.md  evaluation_strategy.md  install.md  limitations.md  manual_setup.md  pr_summary_brain_inspired_gaps.md  release.md  reproducibility.md  schema-investigation-cheatsheet.md  setup.md  slowave_setup.md  token_efficiency.md
docs/benchmarks/: hipporag-qa-comparison.md
docs/core/: 02-salience.md  03-replay.md  04-graph.md  05-consolidation.md  07-temporal.md  08-feedback.md  09-context.md  10-supersession.md  11-vsa.md
docs/iterations/: 20260613_windows_bugs.md  20260625_memory_core_and_cognitive_roadmap.md  20260626_memory_benchmark_strategy.md  20260703_core_architecture.md  20260704_dashboard_review_and_improvements.md  20260706_context_noise_replay_prompt.md  20260706_core_mechanisms_validation_results.md  20260706_enforcing_memory_cycle.md  20260706_strict_memory_contract.md
docs/stages/: stage0_baseline.md  stage1_spreading_activation.md  stage1b_clustering.md  stage2_schemas_as_priors.md  stage3_transition_at_recall.md  stage5_self_supervised_replay.md  stage6_latent_schemas.md  stage7_temporal_context.md  stage8_pattern_separation.md  stage9_multiscale.md
integrations/: README.md
integrations/claude-code/: README.md
integrations/claude-desktop/: README.md  slowave.skill
integrations/cline/: README.md
integrations/codex/: README.md
integrations/cursor/: README.md
integrations/opencode/: README.md
integrations/windsurf/: README.md
packaging/conda/: meta.yaml
packaging/homebrew/: slowave.rb
results/: wiki_scenarios_full.json  wiki_scenarios_no_consolidation.json  wiki_scenarios_no_graph.json  wiki_scenarios_no_salience.json
results/hipporag_comparison/: slowave_2wiki_multihop_1779820602.json  slowave_2wiki_multihop_1779821281.json  slowave_2wiki_multihop_1779821311.json  slowave_2wiki_multihop_1779821450.json
scripts/: README_INGEST_WIKIPEDIA.md  _detach_launch.py  ablation_summary.py  bench_vsa_modes.py  debug_pr1.py  download_datasets.sh  graph_health.py  ingest_wikipedia.py  inspect_schemas.py  proto_threshold_sweep.py  push-public.sh  run-ablation.sh  run-longmemeval-debug-matrix.sh  slowave-check.sh  slowave-cline-wrap.sh
scripts/migrations/: 20260610_cleanup_sessions.sql
slowave/: __init__.py  __main__.py  ops.py
slowave/cli/: backup.py  cleanup.py  clients.py  diagnostics.py  main.py  output.py  setup.py  setup_output.py
slowave/core/: config.py  consolidation.py  context.py  engine.py  feedback.py  graph_health.py  paths.py  procedural.py  procedural_enforcement.py  procedural_enrichment.py  scope.py  supersession.py  supersession_manifold.py
slowave/dashboard/: _html.py  _js.py  app.py
slowave/data/: slowave.skill
slowave/latent/: episodic_store.py  graph_manager.py  metrics.py  replay_engine.py  retrieval.py  salience.py  schema.py  semantic_store.py  synthetic.py  temporal.py  transition_model.py  types.py  vsa.py
slowave/llm/: __init__.py  base.py  ollama_backend.py  openrouter_backend.py
slowave/mcp/: cold_start_files.py  compact.py  daemon.py  http_server.py  server.py  session_reaper.py  session_resolver.py  tools.py
slowave/storage/: schema.sql  sqlite_db.py
slowave/symbolic/: contradiction.py  encoder.py  episode_text.py  onnx_encoder.py  raw_log.py  schema_extractor.py  schema_store.py
slowave/utils/: spinner.py  vec.py
tests/: conftest.py  test_token_efficiency.py
tests/acceptance/: conftest.py  test_e2e.py
tests/benchmarks/: beam_eval.py  dmr_original_eval.py  llm_judge.py  locomo_eval.py  longmemeval_eval.py  report_format.py  retrieval_metrics.py  run_full_benchmark.py  stalememory_eval.py
tests/eval/: __init__.py  test_synthetic_long_session.py
tests/experiments/: ablate_graph.py  diagnose_graph.py  grid_search_graph.py
tests/integration/: dmr_eval.py  dmr_original_eval.py  grid_search_graph.py  hipporag_qa_eval.py  locomo_eval.py  longmemeval_eval.py  run_full_benchmark.py  stalememory_eval.py  test_cline_option_a_demo.py  test_lifecycle_minimal.py  test_old_tools_deleted.py  test_option_a_implicit_sessions.py  test_option_a_mcp_integration.py  test_reinforce_autoderive.py
tests/temporal_eval/: harness.py  run_temporal_eval.py
tests/unit/: _run_geometry_investigation.py  _run_svd_fisher_investigation.py  test_compact_activation.py  test_context_feedback.py  test_context_gating.py  test_contradiction_support_gate.py  test_contradicts_verdict_unreachable.py  test_contrastive_tfidf.py  test_emergent_generalization.py  test_engine_consolidate.py  test_engine_recall.py  test_facet_axis_persistence.py  test_feedback_review_gating.py  test_generalization_stage.py  test_geometry_supersession.py  test_graph_accumulation.py  test_graph_edge_quality.py  test_ingest_service.py  test_labile_lifecycle.py  test_latent_schema.py  test_lifecycle_minimal.py  test_logic_version_tagging.py  test_missing_embedding_supersession.py  test_near_dup_guard_inactive_gap.py  test_old_tools_deleted.py  test_onnx_encoder.py  test_part_of_backfill.py  test_preference_no_geometry_supersession.py  test_procedural_enforcement_tier1.py  test_procedural_generalization.py  (+23 more)
(+331 files in other folders)
