[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slowave"
version = "0.1.9"
description = "Brain-inspired long-term memory for AI agents — zero LLM during ingest or retrieval"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
authors = [{ name = "mrsalty" }]
keywords = ["memory", "agent", "ai", "mcp", "neuroscience", "rag", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "faiss-cpu>=1.7",
  "click>=8.1,<9",
  "sentence-transformers>=2.7",
  "mcp[cli]>=1.0",
  "spacy>=3.8.14",
]

[project.urls]
Homepage = "https://github.com/mrsalty/slowave"
Repository = "https://github.com/mrsalty/slowave"
Issues = "https://github.com/mrsalty/slowave/issues"
Changelog = "https://github.com/mrsalty/slowave/releases"

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "build", "twine"]

[project.scripts]
slowave = "slowave.cli.main:main"
slowave-mcp = "slowave.mcp.server:main"

[tool.setuptools.packages.find]
include = ["slowave*"]
exclude = ["tests*", "migrations*", "scripts*"]

[tool.setuptools.package-data]
slowave = ["storage/schema.sql", "data/slowave.skill"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
